--- a/assignments/README
+++ b/assignments/README
@@ -1,2 +1,2 @@
-Please note these files were written within an IDE then finalized within CodeBlocks.
+Please note the COMP2401 files were written within an IDE then finalized within CodeBlocks.
 For optimal results, they should be run within CodeBlocks.
